# Kage

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  kage_prompt.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: TROUBLESHOOTING.md  architecture.md  configuration.md  plugins.md  security.md
docs/images/: README.md
plugins/recon/: plugin.yaml  recon.py
plugins/recon/workflows/: recon_scan.yaml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
src/kage/: __init__.py  __main__.py  third_party.py  version.py
src/kage/ai/: __init__.py  base.py  streaming.py
src/kage/ai/prompts/: __init__.py  parsers.py  system.py
src/kage/ai/providers/: __init__.py  factory.py  ollama.py  openai.py
src/kage/cli/: __init__.py  app.py
src/kage/cli/commands/: __init__.py  chat.py  hack.py  plugin.py
src/kage/cli/ui/: __init__.py  banner.py  panels.py  prompts.py  themes.py
src/kage/cli/wizard/: __init__.py  setup.py
src/kage/core/: __init__.py  conversation.py  hackmode.py  hooks.py  intent.py  models.py  planner.py  router.py
src/kage/core/agents/: __init__.py  agent.py  context.py  memory.py  orchestrator.py  pipeline.py  scheduler.py
src/kage/core/memory/: __init__.py  blocks.py  compactor.py  retriever.py  store.py  summarizer.py
src/kage/core/observability/: __init__.py  events.py  export.py  recorder.py  session_trace.py  trace.py
src/kage/core/plugins/: __init__.py  tool_loader.py
src/kage/core/policy/: __init__.py  context.py  (+4 more)
src/kage/executor/: __init__.py  base.py  docker.py  kali.py  local.py  ssh.py  wsl.py
src/kage/mcp/: __init__.py  client.py  kali_tools.py  manager.py  models.py
src/kage/persistence/: __init__.py  config.py  session.py
src/kage/plugins/: __init__.py  base.py  manager.py  sandbox.py  schema.py
src/kage/reporting/: __init__.py  engine.py  export.py  findings.py
src/kage/security/: __init__.py  approval.py  audit.py  output_parser.py  safemode.py  scope.py  tool_checker.py  tool_graph.py
src/kage/ui/: __init__.py  diff.py  dino_animator.py  frame_renderer.py  layout.py  palette.py  progress.py  renderer.py  status.py  stream.py
src/kage/utils/: __init__.py  dependencies.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_reporting_integration.py
tests/unit/: test_agent_orchestrator.py  test_approval.py  test_chat_nl_tools.py  test_chat_tool_registry_integration.py  test_chat_ui.py  test_executors.py  test_findings.py  test_hackmode_tools.py  test_hooks.py  test_intent.py  test_layout_panels.py  test_mcp_adapter.py  test_mcp_kali_tools.py  test_memory_compaction.py  test_middleware_legacy_removal.py  test_models.py  test_output_parser.py  test_parallel_scheduler.py  test_persistence.py  test_planner.py  test_plugin_tool_loader.py  test_plugins.py  test_policy_engine.py  test_prompt_compiler.py  test_prompt_middleware_registry.py  test_reporting.py  test_router.py  test_security.py  test_tool_checker.py  test_tool_graph.py  test_tool_registry.py  test_trace_pipeline.py  test_ui_renderer.py  test_workflow_templates.py
(+29 files in other folders)
